# pysonica

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  security.yml
docs/adr/: 001-no-cross-module-imports.md
migrations/: env.py
src/app/: __init__.py  main.py
src/app/api/: __init__.py  deps.py  version.py
src/app/api/v1/: router.py
src/app/cli/: __init__.py  main.py
src/app/config/: README.md  __init__.py  settings.py
src/app/database/: README.md  __init__.py  session.py  types.py
src/app/errors/: README.md  __init__.py  exceptions.py  handlers.py  middleware.py  schemas.py
src/app/health/: README.md  __init__.py  routes.py
src/app/logging/: README.md  __init__.py  middleware.py  setup.py
src/app/resilience/: README.md  __init__.py  retry.py
src/app/security/: README.md  __init__.py  middleware.py
tests/: conftest.py
tests/integration/: conftest.py  test_errors.py  test_health.py  test_version.py
tests/migrations/: test_stairway.py
tests/unit/: conftest.py  test_config.py  test_errors.py  test_resilience.py
