[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pysonica"
version = "0.1.0"
description = "Python infrastructure boilerplate — web APIs, CLI tools, batch processors."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.32,<1",
    "sqlalchemy[asyncio]>=2.0,<3",
    "asyncpg>=0.30,<1",
    "alembic>=1.14,<2",
    "pydantic>=2.10,<3",
    "pydantic-settings>=2.7,<3",
    "structlog>=24.4,<26",
    "asgi-correlation-id>=4.3,<5",
    "tenacity>=9.0,<10",
    "typer>=0.15,<1",
    "python-dotenv>=1.0,<2",
]

[project.scripts]
app-cli = "app.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/app"]

[dependency-groups]
dev = [
    "pytest>=8.3,<10",
    "pytest-asyncio>=0.25,<1",
    "pytest-cov>=6.0,<7",
    "httpx>=0.28,<1",
    "ruff>=0.9,<1",
    "pyright>=1.1.389,<2",
    "mypy>=1.13,<2",
    "pre-commit>=4.0,<5",
    "commitizen>=4.1,<5",
    "import-linter>=2.1,<3",
    "pip-audit>=2.7,<3",
    "sqlalchemy[mypy]>=2.0,<3",
]

# =============================================================================
# Ruff
# =============================================================================

[tool.ruff]
target-version = "py312"
line-length = 88
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E", "W", # pycodestyle
    "I",      # isort
    "N",      # pep8-naming
    "UP",     # pyupgrade — enforce 3.12+ syntax
    "S",      # flake8-bandit — security
    "B",      # flake8-bugbear
    "A",      # flake8-builtins
    "C4",     # flake8-comprehensions
    "C90",    # mccabe complexity
    "DTZ",    # flake8-datetimez — timezone-aware datetimes
    "T10",    # flake8-debugger
    "T20",    # flake8-print
    "PT",     # flake8-pytest-style
    "SIM",    # flake8-simplify
    "RUF",    # ruff-specific
    "ANN",    # flake8-annotations
    "ASYNC",  # flake8-async
    "LOG",    # flake8-logging
    "G",      # flake8-logging-format
    "FAST",   # fastapi
]
ignore = [
    "S104",   # binding to 0.0.0.0 — intentional in containers
    "B008",   # Depends() in defaults — THE FastAPI pattern
    "ANN401", # Dynamically typed expressions (typing.Any) — sometimes unavoidable
    # FastAPI evaluates annotations at runtime for dependency injection.
    # Moving imports to TYPE_CHECKING blocks breaks Depends(), Query(), etc.
    "TCH",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",   # assert in tests
    "ANN",    # annotations not enforced in tests
    "ARG",    # unused fixture args
]
"src/app/cli/**/*.py" = [
    "T20",    # print() in CLI
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.flake8-pytest-style]
fixture-parentheses = false

# =============================================================================
# Pyright
# =============================================================================

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
typeCheckingMode = "strict"
include = ["src"]
venvPath = "."
venv = ".venv"
reportMissingTypeStubs = false
reportUnknownMemberType = "warning"

# =============================================================================
# Mypy
# =============================================================================

[tool.mypy]
python_version = "3.12"
strict = true
plugins = ["pydantic.mypy", "sqlalchemy.ext.mypy.plugin"]
mypy_path = "src"
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "uvicorn",
    "asgi_correlation_id",
]
ignore_missing_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# =============================================================================
# Pytest
# =============================================================================

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
markers = [
    "unit: Pure logic tests — no I/O, no DB.",
    "integration: Tests that hit a real database or network.",
    "slow: Tests too slow for the default CI loop.",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:asyncpg",
    "ignore:'asyncio.*' is deprecated:DeprecationWarning",
]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",
    "--tb=short",
]

# =============================================================================
# Coverage
# =============================================================================

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/cli/*",
    "*/__main__.py",
]

[tool.coverage.report]
fail_under = 80
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__",
    "@overload",
    "raise NotImplementedError",
    "\\.\\.\\.",
]

# =============================================================================
# Commitizen
# =============================================================================

[tool.commitizen]
name = "cz_conventional_commits"
version = "0.1.0"
version_files = [
    "pyproject.toml:version",
]
tag_format = "v$version"
update_changelog_on_bump = true
changelog_file = "CHANGELOG.md"

# =============================================================================
# Import Linter — module independence enforcement
# =============================================================================

[tool.importlinter]
root_packages = ["app"]

[[tool.importlinter.contracts]]
name = "Infrastructure modules are independent"
type = "independence"
modules = [
    "app.config",
    "app.logging",
    "app.database",
    "app.errors",
    "app.health",
    "app.security",
    "app.resilience",
]

[[tool.importlinter.contracts]]
name = "Infrastructure modules do not import api, cli, or main"
type = "forbidden"
source_modules = [
    "app.config",
    "app.logging",
    "app.database",
    "app.errors",
    "app.health",
    "app.security",
    "app.resilience",
]
forbidden_modules = [
    "app.api",
    "app.cli",
    "app.main",
]